--- a/JS2-JQueryGen.html
+++ b/JS2-JQueryGen.html
@@ -4,31 +4,11 @@
 	<meta charset="utf-8"> 
 	<head>
 		<title>JS2 - JQuery Generator</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="script.js"></script>
 	</head>
-	<style>
-	table {
-	  font-family: arial, sans-serif;
-	  border-collapse: collapse;
-	  width: 100%;
-	}
+	<link rel="stylesheet" type="text/css" href="style.css">
 
-	td, th {
-	  border: 1px solid black;
-	  text-align: left;
-	  padding: 8px;
-	}
-
-	.oddRow{
-	  background-color: #dddddd;
-	}
-
-	.tenth{
-	  border-style: solid;
-	  border-width: 1px 1px 5px 1px;
-	  border-color: black;
-	}
-
-	</style>
 	<body>
 
 		<div>
@@ -38,8 +18,7 @@
 		</div>
 		<div id="tbArea">
 		</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="script.js"></script>
+
 
 	</body>
 </html>
