Modified the projects as suggested

--- a/JS2-JQueryGenerator/JS2-JQueryGen.html
+++ b/JS2-JQueryGenerator/JS2-JQueryGen.html
@@ -13,7 +13,7 @@
 
 		<div>
 			<h3>JS2 - JQuery Generator</h3>
-			<input type="text" placeholder="0" id="inputText" onkeypress="generateTableEvt(event)">
+			<input type="number" min="0" max="3000" placeholder="0" id="inputNumber" onkeypress="generateTableEvt(event)">
 			<button id="goBtn" onclick="generateTable()">GO</button>
 		</div>
 		<div id="tbArea">
